feat: mlops placeholders and aws module updated