@@ -1,7 +1,7 @@
 ---
 title: "Architecture and Agents"
 description: "Coordinate self-hosted builds securely across distributed environments using SSH, WebSocket, and dynamic container agents."
-overview: "Jenkins is a self-hosted automation server that you operate on your own infrastructure. Learn how the coordinator-executor split prevents performance crashes, how to secure network connection topologies, and how to scale dynamically with containerized agents."
+overview: "Jenkins is a self-hosted automation server that you operate on your own infrastructure. Learn how the controller, agents, executors, labels, connection modes, and controller JVM settings fit together in a production Jenkins installation."
 tags: ["jenkins", "architecture", "agents", "ci-cd"]
 order: 1
 id: article-cicd-jenkins-architecture-and-agents
@@ -11,275 +11,173 @@ aliases:
 
 ## Table of Contents
 
-1. [The Problem](#the-problem)
-2. [The Controller and Agent Split](#the-controller-and-agent-split)
-3. [Agent Connection Topologies](#agent-connection-topologies)
-4. [Label Routing and Workload Scheduling](#label-routing-and-workload-scheduling)
-5. [Dynamic Container Agents](#dynamic-container-agents)
-6. [Putting It All Together](#putting-it-all-together)
-7. [What's Next](#whats-next)
+1. [The Shape of a Jenkins Installation](#the-shape-of-a-jenkins-installation)
+2. [Controller and Agent Architecture](#controller-and-agent-architecture)
+3. [How Agents Connect](#how-agents-connect)
+4. [Labels and Agent Selection](#labels-and-agent-selection)
+5. [JVM Tuning for the Controller](#jvm-tuning-for-the-controller)
+6. [Failure Modes](#failure-modes)
+7. [Putting It All Together](#putting-it-all-together)
+8. [What's Next](#whats-next)
 
-## The Problem
+## The Shape of a Jenkins Installation
+<!-- section-summary: A production Jenkins setup separates the service that coordinates builds from the machines that execute build commands. -->
 
-Operating a self-hosted Continuous Integration and Continuous Delivery (CI/CD) system exposes an engineering team to resource, scheduling, and network boundaries that managed cloud services hide. When teams move from managed runners to their own self-hosted automation servers, they frequently run into major operational friction:
+Jenkins is a self-hosted automation server. That means your team runs the service, owns the storage, chooses the plugins, controls the network path, and carries the operational responsibility when builds slow down or the controller goes offline. A managed CI system hides a lot of that machinery, while Jenkins asks the platform team to design it clearly.
 
-* **The Controller Resource Crash**: A development team hosts Jenkins on a single virtual machine. To get up and running quickly, they run all test suites, code compilations, and Docker builds directly on the primary Jenkins server process. When a developer pushes an un-optimized test suite containing an infinite CPU loop, it consumes all available system memory. The entire Jenkins web interface freezes, active pipelines abort midway, and the team is locked out of deploying critical hotfixes until the system administrator forcefully restarts the server.
-* **The Firewall Access Deadlock**: An enterprise installs a central Jenkins controller in a highly secured corporate virtual private cloud. The development teams want to attach build machines situated in remote private subnets and external staging clouds. Because corporate security policy strictly prohibits the controller from opening outbound network connections to external networks, the team cannot register new build executors, halting delivery across departments.
-* **The Shared Workspace Contamination**: Multiple software projects share a permanent, persistent build server. During a morning deployment sprint, a Node.js test run writes temporary build artifacts to a shared folder. A subsequent Python build runs on the same machine, reads the stale temporary files left behind by the Node.js build, and fails its integration checks due to ghost dependency mismatches that do not exist in the source repository.
+Think about Summit Retail, a team with three services: `checkout-api`, `inventory-api`, and `payments-api`. At first, they install Jenkins on one virtual machine and let every job run there. The UI feels fine for a few days, then a large test run fills the disk, a Docker build consumes CPU, and a production hotfix waits behind a queue that nobody can open because the Jenkins web page also lives on that same overloaded machine.
 
-These scenarios illustrate that running an automation server requires an explicit physical split between coordinating builds and executing code.
+That failure explains the first big idea in this module. Jenkins needs one place that **coordinates work** and separate places that **execute work**. The coordinator keeps job definitions, credentials, build history, plugin state, and scheduling decisions. The executors run shell commands, compile code, run tests, build images, and create disposable workspaces.
 
-## The Controller and Agent Split
+The official Jenkins docs use a few words that sound similar, so let us define them before we stack them together. A **controller** is the Jenkins service itself, including the web UI, queue, configuration, credentials, plugin runtime, and build records. An **agent** is a machine, container, or pod that connects to the controller and runs build steps. An **executor** is a single execution slot on an agent, so one agent with four executors can run four jobs at the same time.
 
-To prevent resource-exhaustion crashes and system-wide slowness, Jenkins uses a distributed architecture that separates coordination logic from execution environments. This is known as the **Controller and Agent Split**.
+Those three words create the whole architecture. The controller answers, "What should run next?" The agent answers, "Where can this work run?" The executor answers, "How many jobs can this machine handle right now?" Once those roles are clear, Jenkins stops feeling like one mysterious server and starts looking like a small scheduling system that your team can operate on purpose.
 
-The **Controller** (historically called the Master) is the central orchestration process of the Jenkins installation. It is a Java-based daemon that runs the web-based UI dashboard, manages the pipeline execution queue, stores credentials, loads and updates plugins, and coordinates build distributions. The controller should never compile code, run unit tests, or build container images. In a production-ready Jenkins topology, the controller's internal executor count is explicitly configured to zero. This ensures that the controller's CPU and memory remain entirely reserved for lightweight system operations, UI rendering, and agent scheduling.
+## Controller and Agent Architecture
+<!-- section-summary: The controller owns durable Jenkins state, while agents provide isolated runtime capacity for builds and deployments. -->
 
-An **Agent** is an independent compute instance (a bare-metal server, a virtual machine, or a container) that connects to the controller and waits for work. The agent runs a lightweight, headless Java agent runtime (`remoting.jar`). When the controller decides to run a pipeline stage, it serializes the step instructions and dispatches them to an available agent. The agent executes the commands locally inside its own operating system environment and streams the resulting console logs and execution statuses back to the controller over a network socket.
+The **controller and agent architecture** gives Jenkins a clean boundary between durable state and risky execution. Durable state means the information Jenkins must keep after a restart: global config, users, folders, job history, credentials metadata, plugins, node definitions, and pipeline records. Risky execution means arbitrary commands from application repositories, dependency install scripts, test suites, compilers, Docker builds, and deployment CLIs.
 
-An **Executor** is an individual execution slot on an agent. An executor represents a single thread of execution. If an agent is configured with four executors, it can run up to four distinct pipeline steps or jobs concurrently.
+The controller stores its main state under `$JENKINS_HOME`, commonly `/var/lib/jenkins` on Linux or `/var/jenkins_home` in the official Docker image. That directory holds configuration XML, job folders, plugin files, secret material, node metadata, build records, and fingerprints. A backup or restore plan must treat `$JENKINS_HOME` as controller state, while the article on plugins and configuration later shows how teams also move as much configuration as possible into Git.
 
-```mermaid
-flowchart TD
-    Controller["Controller Node<br/>(Executors: 0)"]
-    Queue["Build Queue"]
-    Agent1["Agent Node 1<br/>(Linux VM)"]
-    Agent2["Agent Node 2<br/>(Windows VM)"]
-    Executor1["Executor 1<br/>(Lint & Test)"]
-    Executor2["Executor 2<br/>(Docker Build)"]
-    Executor3["Executor 3<br/>(.NET Compile)"]
+Agents protect the controller from everyday build pressure. Summit Retail puts Maven, Node.js, Docker, Trivy, Terraform, kubectl, and cloud CLIs on agents instead of the controller. A broken test can fill an agent workspace, and a compiler can use all CPU on an agent, while the Jenkins UI and queue still have enough memory and CPU to keep scheduling work.
 
-    Queue --> Controller
-    Controller -->|Dispatch Job 1| Agent1
-    Controller -->|Dispatch Job 2| Agent2
-    Agent1 --> Executor1
-    Agent1 --> Executor2
-    Agent2 --> Executor3
+Most production controllers run with **zero executors** on the built-in node. This setting tells Jenkins that the controller coordinates jobs and leaves build execution to agents. In Configuration as Code, the idea usually appears like this:
+
+```yaml
+jenkins:
+  numExecutors: 0
+  mode: EXCLUSIVE
 ```
 
-![Jenkins controller and agent boundary showing durable controller state, queued work, labels, connection modes, and disposable workspaces](/content-assets/articles/article-cicd-jenkins-architecture-and-agents/jenkins-controller-agent-boundary.png)
+`numExecutors: 0` removes build slots from the controller. `mode: EXCLUSIVE` makes Jenkins send jobs to agents that match labels instead of treating the controller as a general fallback. This small setting prevents the most common beginner mistake: letting a pipeline accidentally run `npm install`, `docker build`, or `terraform apply` on the machine that also stores Jenkins secrets and serves the UI.
 
-*The controller owns durable state and scheduling decisions; agents provide disposable execution workspaces selected by labels and connected through SSH or WebSocket.*
+Agents also create **workspaces**. A workspace is the directory where Jenkins checks out the repository and runs commands for a job, usually under an agent root path like `/var/jenkins_agent/workspace/checkout-api-main`. Persistent workspaces can speed up builds because Maven caches, npm caches, and Gradle caches remain between runs. They also create dirty-state risk, because a file from yesterday's build can change today's result.
 
-### The $JENKINS_HOME File Structure
+Real teams handle that tradeoff explicitly. For normal agents, they clean the workspace at the start or end of sensitive jobs and keep dependency caches in known cache directories rather than random project folders. For high-risk or highly variable builds, they use ephemeral container agents so the whole filesystem disappears after the build. The right choice depends on build speed, security boundaries, and how much the team trusts the code that enters the agent.
 
-The controller preserves all system state, job definitions, credentials, and build logs within a single root folder known as `$JENKINS_HOME` (typically located at `/var/lib/jenkins` on Linux systems). It is critical to understand what lives inside this directory:
+## How Agents Connect
+<!-- section-summary: Jenkins supports several connection topologies, and the right one depends on which side can initiate the network connection. -->
 
-* `config.xml`: The global Jenkins configuration file containing security settings, agent definitions, and system-wide options.
-* `jobs/`: A directory containing one subfolder for every registered pipeline job, storing job configurations (`config.xml`), build histories, and serialized console logs.
-* `plugins/`: The folder containing all installed plugin files (`.jpi` or `.hpi`) and their extracted directories.
-* `secrets/`: Cryptographic keys used to encrypt credentials stored in the system vault.
-* `nodes/`: Metadata and configurations for all registered agent nodes.
+After the team separates controller and agent responsibilities, the next question becomes network shape. An agent must maintain a communication channel with the controller so it can receive work and stream logs. Jenkins supports several connection styles because real networks have firewalls, private subnets, NAT gateways, VPNs, and security teams with strong opinions.
 
-Because `$JENKINS_HOME` holds the entire state of the controller, it must be regularly backed up or, preferably, managed declaratively using configuration-as-code patterns.
+**SSH agents** fit long-lived Linux or Unix machines that the controller can reach over the network. Jenkins uses SSH credentials, connects to the host, starts the agent process, and uses that connection for work. Summit Retail uses this for a small pool of build VMs in the same VPC as the controller because the controller can reach those instances on port 22 and the security team already manages SSH keys.
 
-### Agent Workspace Persistence
+**Inbound agents** reverse the connection direction. The agent starts a Java process and connects outward to the controller, often using a secret that Jenkins generated for that node. This fits private build machines where the controller cannot open a direct connection into the subnet. The agent can reach `https://jenkins.summit.example`, so it dials out and waits for work.
 
-When an agent receives a build assignment, it creates a persistent workspace folder on its local disk (usually located at `<agent_root>/workspace/<job_name>/`). The agent checks out the Git repository into this workspace and executes all script steps inside it.
+**WebSocket inbound agents** use the normal Jenkins web URL instead of a separate inbound TCP agent port. This matters when a reverse proxy, corporate firewall, or Kubernetes ingress already permits HTTPS traffic but the security team wants to avoid opening another TCP port. The Jenkins security docs call out that inbound agents can use WebSocket transport without enabling an extra TCP port.
 
-By default, agent workspaces persist between builds. This persistence speeds up builds by caching dependencies like `node_modules` or `.m2` folders. However, it also introduces the risk of workspace contamination if files from a previous run are left behind. To ensure a clean state, pipelines can explicitly call the `cleanWs()` step inside their post-build blocks, or use ephemeral container agents that destroy the workspace filesystem entirely when the build completes.
+**Kubernetes dynamic agents** create short-lived pods for each build. The Kubernetes plugin starts a pod, runs the Jenkins agent container inside it, lets the build use extra containers such as Maven or Kaniko, and stops the pod after the build. This fits teams that already operate Kubernetes and want clean workspaces, elastic capacity, and per-build tool images.
 
-## Agent Connection Topologies
+| Connection style | Who starts the connection | Good fit | Main operational check |
+|---|---|---|---|
+| SSH agent | Controller to agent | Stable VMs in reachable networks | SSH keys, host keys, Java, and firewall rules |
+| Inbound TCP agent | Agent to controller | Private agents behind NAT | Agent secret handling and inbound agent port exposure |
+| Inbound WebSocket agent | Agent to controller over HTTPS | Locked-down networks and reverse proxies | Correct Jenkins URL and proxy WebSocket support |
+| Kubernetes pod agent | Plugin creates pod, pod connects back | Elastic containerized builds | Pod template, service account, image, and namespace policy |
 
-Jenkins supports multiple connection topologies to establish communication between the controller and its agents. The choice depends on network firewalls, subnets, and operating systems.
+Here is the practical way to choose. If the controller can reach a controlled VM fleet and SSH operations already work well, SSH agents keep things simple. If agents live in a private subnet where only outbound HTTPS works, WebSocket inbound agents usually fit. If every build should start with a clean filesystem and your team already trusts Kubernetes as the runtime, dynamic pod agents give Jenkins a fresh worker for each run.
 
-### SSH Agents (Controller-Initiated Outbound)
+## Labels and Agent Selection
+<!-- section-summary: Labels let a Jenkinsfile ask for a capability instead of naming a specific machine. -->
 
-In the SSH agent topology, the controller acts as an SSH client. The agent machine runs an SSH daemon. When the agent is registered, the administrator stores the agent's private SSH key in the controller's secure credential store.
+Once agents exist, Jenkins needs a way to pick the right one. **Labels** solve that problem. A label is a capability name attached to one or more agents, such as `linux`, `docker`, `maven`, `windows`, `gpu`, or `terraform`. A pipeline asks for labels, and Jenkins schedules the stage on an available executor from an agent that matches.
 
-The connection handshake follows these steps:
-
-1. The controller opens an outbound TCP connection to the agent over port 22.
-2. The controller authenticates using the stored SSH credentials.
-3. The controller automatically copies the Java agent library (`remoting.jar`) to the agent's filesystem.
-4. The controller starts the Java agent process on the agent machine:
-   ```bash
-   java -jar /path/to/remoting.jar
-   ```
-
-This topology is highly recommended when the controller has direct network route access to the agents, such as when both live in the same private cloud VPC. The main limitation is that if an agent resides behind a NAT or inside a secured private office network, the controller cannot open the outbound SSH connection.
-
-### Inbound WebSocket Agents (Agent-Initiated Inbound)
-
-When agents live behind strict firewalls, NATs, or in remote staging networks, the controller cannot initiate outbound connections. Inbound agents flip the connection direction. The agent machine initiates the connection to the controller.
-
-Historically, inbound agents required opening a dedicated TCP port on the controller (typically port 50000). Modern Jenkins setups replace this with WebSocket communication. The agent connects to the controller over the standard HTTP or HTTPS port (port 80 or 443) used to serve the web UI, upgrading the connection to a persistent WebSocket.
-
-To run an inbound WebSocket agent, the agent downloads `agent.jar` from the controller and runs the process locally:
-
-```bash
-java -jar agent.jar \
-  -url https://jenkins.example.com/ \
-  -secret 4a7e93b8fbc8d312a009 \
-  -name production-agent-01 \
-  -webSocket
-```
-
-The secret token is a cryptographically secure key generated by the controller when the agent is registered. This token validates the agent's identity before the controller accepts the connection.
-
-### Connection Topology Tradeoffs
-
-| Feature | SSH Agent | Inbound WebSocket |
-| :--- | :--- | :--- |
-| **Connection Initiator** | Controller (outbound) | Agent (inbound) |
-| **Transport Protocol** | SSH (TCP port 22) | WebSocket (HTTP/HTTPS port 80/443) |
-| **Firewall Requirement** | Agent must accept SSH traffic from Controller | Controller must accept HTTP/HTTPS from Agent |
-| **Credential Storage** | Private keys stored on the Controller | Secret token stored on the Agent machine |
-| **Best Used For** | Same-VPC Linux virtual machines | Private subnet or remote-office agents |
-
-## Label Routing and Workload Scheduling
-
-In a production cluster, agents are rarely identical. Some agents run on Linux with GPU drivers for machine learning pipelines, others run on macOS to compile iOS applications, and others run inside specialized Windows environments.
-
-Jenkins uses **Label Routing** to match pipeline jobs with the correct execution environments. A label is an arbitrary alphanumeric tag assigned to an agent in the controller's configuration.
-
-When authoring a Jenkinsfile, developers declare which labels the pipeline requires:
-
-```groovy
-pipeline {
-    agent { label 'linux-docker-builder' }
-    stages {
-        stage('Compile') {
-            steps {
-                sh 'npm ci && npm run build'
-            }
-        }
-    }
-}
-```
-
-When this pipeline is triggered, the controller holds the build in its queue while it scans all online agents. Once it finds an agent carrying the `linux-docker-builder` label with an open executor slot, it dispatches the build steps to that agent.
-
-For complex workflows, developers can declare different agent requirements for individual stages by setting the pipeline-level agent to `none`:
+Summit Retail starts with three pools. General Java builds use agents labeled `linux && maven`. Container image builds use agents labeled `linux && docker`. Windows installer builds use agents labeled `windows`. The Jenkinsfile talks about capabilities, so the platform team can replace the actual machines without asking every service team to edit pipeline code.
 
 ```groovy
 pipeline {
     agent none
     stages {
-        stage('Build Frontend') {
-            agent { label 'node-22-agent' }
-            steps {
-                sh 'npm run build'
-            }
-        }
-        stage('Compile iOS App') {
-            agent { label 'macos-xcode-agent' }
-            steps {
-                sh 'xcodebuild -scheme PolarisApp'
-            }
-        }
-    }
-}
-```
-
-Using `agent none` at the pipeline root requires declaring an explicit `agent` inside every single `stage` block. It is important to note that when stages execute on different agents, the local workspace files do not automatically carry over. Platform teams must use `stash` and `unstash` steps to serialize and copy build artifacts across agents over the network.
-
-## Dynamic Container Agents
-
-While permanent virtual machine agents are highly effective for consistent workloads, they suffer from two operational weaknesses: dependency drift and workspace pollution. Over time, manually installing compilers, runtimes, and libraries on permanent VMs leads to snowflake environments that are hard to replicate.
-
-**Dynamic Container Agents** solve this problem by leveraging Docker or Kubernetes. Instead of using a permanent VM, Jenkins spins up a fresh container or Kubernetes Pod dynamically when a build starts, executes the pipeline steps inside that container, and automatically destroys the container when the build completes.
-
-This dynamic topology mirrors the serverless execution model of managed platforms, ensuring 100% environment isolation and clean environments for every build.
-
-### Docker Pipeline Execution
-
-When using Docker-based agents, the controller tells a Docker daemon on a registered agent machine to spin up a container from a specified image. The pipeline steps are executed directly within the container's shell context:
-
-```groovy
-pipeline {
-    agent {
-        docker {
-            image 'node:22.2.0-alpine'
-            args '-v /tmp/cache:/tmp/cache'
-        }
-    }
-    stages {
         stage('Test') {
+            agent { label 'linux && maven' }
             steps {
-                sh 'node --version'
-                sh 'npm ci && npm test'
+                sh 'mvn test'
+            }
+        }
+        stage('Build Image') {
+            agent { label 'linux && docker' }
+            steps {
+                sh 'docker build -t registry.example.com/checkout-api:${BUILD_NUMBER} .'
             }
         }
     }
 }
 ```
 
-Under the hood, Jenkins executes this container by automatically mounting the agent's workspace directory inside the container using volume mounts. This allows steps inside the container to read and write files directly to the agent host's disk.
+The top-level `agent none` tells Jenkins that each stage chooses its own runtime. The `Test` stage lands on a Maven-capable Linux agent, while the image stage lands on an agent with Docker access. This shape keeps special privileges narrow, because the Maven-only pool never needs Docker socket access.
 
-### Kubernetes Dynamic Pod Agents
+Labels also help with capacity planning. If the queue fills with jobs waiting for `linux && docker`, the team knows the Docker-capable pool is the bottleneck. If Windows jobs wait while Linux jobs keep moving, the Windows pool needs attention. Jenkins queue behavior becomes useful evidence because labels describe real resource classes.
 
-In cloud-native environments, the most robust topology is running Jenkins on Kubernetes. Using the Kubernetes plugin, the controller communicates with the Kubernetes API server to spin up ephemeral Pods to act as one-time agents.
+Good label design stays boring and capability-based. Labels such as `linux`, `jdk21`, `docker`, `arm64`, `terraform`, and `windows` age well because they describe what a build needs. Labels such as `big-box-01` or `alice-test-vm` tie pipeline code to a single machine, and the next hardware replacement turns into a repository-wide cleanup.
 
-Developers define a custom Pod specification directly inside the Jenkinsfile, grouping multiple container runtime dependencies together:
+## JVM Tuning for the Controller
+<!-- section-summary: Controller tuning starts with evidence from heap usage, garbage collection, queue behavior, and disk activity. -->
 
-```groovy
-pipeline {
-    agent {
-        kubernetes {
-            yaml '''
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    some-label: jenkins-agent
-spec:
-  containers:
-  - name: maven
-    image: maven:3.9.6-eclipse-temurin-17
-    command:
-    - cat
-    tty: true
-  - name: docker
-    image: docker:26.1.1
-    command:
-    - cat
-    tty: true
-'''
-        }
-    }
-    stages {
-        stage('Build Java Code') {
-            steps {
-                container('maven') {
-                    sh 'mvn clean package'
-                }
-            }
-        }
-        stage('Build Container Image') {
-            steps {
-                container('docker') {
-                    sh 'docker build -t myapp:latest .'
-                }
-            }
-        }
-    }
-}
+Jenkins runs on the Java Virtual Machine, usually shortened to **JVM**. The JVM gives Jenkins a managed runtime, and the most important controller setting is the Java heap. The **heap** is the memory area where Jenkins keeps Java objects such as jobs, queue items, plugin objects, build records, and in-flight pipeline state.
+
+When the heap runs too small, Jenkins spends too much time on **garbage collection**, often shortened to GC. GC is the JVM process that frees memory that the application no longer needs. A little GC is normal. Constant full GC creates a controller that looks alive but responds slowly, pauses often, and sometimes throws `OutOfMemoryError`.
+
+Summit Retail notices that the UI freezes every afternoon. Before changing numbers, the platform team gathers evidence: current heap use in Manage Jenkins, JVM arguments from System Information, controller logs, GC logs, plugin count, number of running pipelines, queue depth, disk I/O, and whether builds accidentally run on the controller. This evidence matters because a memory problem, a slow disk, a plugin loop, and an overloaded built-in node can feel similar from the UI.
+
+A Linux package install often controls heap settings through a service environment file. A containerized controller usually receives the setting through `JAVA_OPTS` or `JENKINS_JAVA_OPTS`. The exact file path depends on how Jenkins was installed, but the setting shape looks like this:
+
+```bash
+JENKINS_JAVA_OPTS="-Xms2g -Xmx4g -XX:+UseG1GC -Xlog:gc*:file=/var/log/jenkins/gc.log:time,uptime,level,tags"
 ```
 
-The `container` step directs Jenkins to execute specific shell commands inside a targeted container within the dynamic Pod. The Kubernetes plugin automatically attaches a helper container (`jnlp`) to the Pod to maintain the connection back to the controller, destroying the entire Pod namespace when the build concludes.
+`-Xms` sets the starting heap size, and `-Xmx` sets the maximum heap size. `UseG1GC` selects a garbage collector that works well for many server-side Java applications. The GC log file gives the team concrete pause data instead of guesses from a slow browser tab.
+
+Heap size still has limits. A controller with 64 GB of RAM does not automatically deserve a 60 GB heap. Huge heaps can create longer pauses and hide plugin or job design problems for a while. The controller also needs memory for the operating system, JVM native memory, file cache, web server work, and plugin overhead.
+
+A healthy tuning loop has a steady rhythm. First, keep builds off the controller with zero executors. Next, measure heap pressure and GC pauses during normal work. Then raise `-Xmx` gradually if live data shows memory pressure. After that, review plugins, job history retention, pipeline design, and disk performance because controller tuning can only help the controller, not fix every workload that lands on it.
+
+## Failure Modes
+<!-- section-summary: Common Jenkins architecture failures usually come from blurred boundaries, wrong connection choices, weak labels, or unmeasured controller pressure. -->
+
+Jenkins architecture problems usually announce themselves through repeated symptoms. The useful move is to map each symptom back to a boundary: controller state, agent runtime, network connection, label capacity, workspace hygiene, or JVM pressure. Once the boundary is clear, the fix becomes much more concrete.
+
+| Symptom | Likely boundary | What the team checks |
+|---|---|---|
+| UI freezes during builds | Controller execution boundary | Built-in node executors, CPU, heap, and jobs running on the controller |
+| Jobs wait forever for an agent | Label capacity | Queue reasons, matching labels, offline agents, and executor counts |
+| Agents disconnect randomly | Network topology | Proxy timeouts, WebSocket support, inbound port rules, and agent logs |
+| Builds pass once and fail later | Workspace state | Old files, shared caches, cleanup steps, and ephemeral agent use |
+| Controller restarts or throws heap errors | JVM and plugin pressure | GC logs, heap use, plugin changes, job count, and build retention |
+| PR builds can reach secrets | Trust boundary | Multibranch trust settings, credential scope, and branch conditions |
+
+The first failure mode is **controller bleed**. This happens when build work leaks back onto the controller. A job may use `agent any`, the built-in node may still have executors, or a plugin task may run heavy work on the controller. The fix starts with `numExecutors: 0`, explicit stage agents, and a review of jobs that still point at the built-in node.
+
+The second failure mode is **label starvation**. Jenkins may have many agents online, while one narrow label such as `docker && arm64` has no free executor. The queue message usually tells the truth here. Capacity planning should follow labels, because labels describe the real build capabilities that teams request.
+
+The third failure mode is **connection mismatch**. A controller-initiated SSH setup struggles when agents sit behind NAT. An inbound TCP setup struggles when the firewall blocks the agent port. A WebSocket setup struggles when the reverse proxy drops upgraded connections. Connection style should follow the network path that can stay open during normal operations.
+
+The fourth failure mode is **workspace contamination**. A persistent workspace can hold a stale generated file, old dependency, previous test database, or leftover package. Teams reduce this with `cleanWs()`, explicit checkout behavior, known cache directories, and ephemeral pod agents for builds that need strong isolation.
+
+The fifth failure mode is **unmeasured controller tuning**. Raising heap after every freeze can delay the real fix. The team should first confirm that builds stay off the controller, then use heap graphs, GC logs, queue depth, plugin changes, and disk metrics to decide whether the controller needs memory, faster storage, fewer retained builds, or a plugin rollback.
 
 ## Putting It All Together
+<!-- section-summary: A reliable Jenkins installation keeps state on the controller, execution on agents, and capacity decisions visible through labels and metrics. -->
 
-By separating the control center from the execution engine, we solve the stability, networking, and workspace contamination problems described at the start:
+Summit Retail's improved Jenkins setup now has one controller and several agent pools. The controller has zero executors, stores `$JENKINS_HOME` on reliable storage, exports most configuration through code, and records GC logs for tuning. The agent pools carry the tools: Maven agents for Java services, Docker agents for image builds, Windows agents for installer work, and Kubernetes pod agents for isolated one-off builds.
 
-* **Monolithic Controller Crashes**: Setting the controller's internal executor count to 0 ensures that memory-heavy builds never run on the controller. When an infinite CPU loop or memory leak occurs inside a pipeline, it only crashes the isolated agent VM or container. The controller dashboard remains fully operational and handles subsequent builds normally.
-* **Network Deadlocks**: The Inbound WebSocket agent topology allows build machines in secure private networks to connect outward to the controller over standard HTTPS (port 443). This eliminates the need for security teams to open dangerous outbound network ports on the core controller VPC.
-* **Workspace Contamination**: Moving from permanent shared virtual machines to dynamic container or Kubernetes agents guarantees that every pipeline run starts with a completely pristine filesystem. Caches and dependencies are isolated to specific container namespaces, eliminating side-effects from legacy builds.
+The Jenkinsfiles ask for capabilities by label instead of naming machines. The network design uses SSH agents for the reachable VM fleet and WebSocket inbound agents for private subnets. The Kubernetes plugin creates temporary pods for builds that need a fresh filesystem. Each choice follows a real boundary rather than a preference.
+
+When a build queue grows, the team can see which label needs capacity. When an agent disconnects, they can inspect that connection style and its network path. When the UI slows down, they can separate controller JVM evidence from agent workload evidence. This is what operating Jenkins means in production: keep responsibilities separate, keep evidence close, and make each failure point small enough to reason about.
 
 ## What's Next
+<!-- section-summary: The next article turns this architecture into version-controlled pipelines that run on the right agents. -->
 
-Now that we have established a secure and distributed master-agent architecture, the next challenge is representing the build instructions as version-controlled code. Rather than manually clicking through job forms in the Jenkins web UI, we declare our entire build workflow inside a `Jenkinsfile` stored alongside our application code. Let's move to **Pipelines and Jenkinsfile** to learn how to author, lint, and coordinate structured Groovy declarative pipelines.
+The controller and agent architecture gives Jenkins a stable place to run work. The next step is describing the work in a way the team can review, test, and version. That is where `Jenkinsfile` and Pipeline as Code enter the story.
 
-![Jenkins architecture summary showing controller state, agents, connections, labels, dynamic agents, and workspace cleanup](/content-assets/articles/article-cicd-jenkins-architecture-and-agents/jenkins-architecture-summary.png)
-
-*Use this as the Jenkins architecture checklist: separate controller state from agent execution, protect `$JENKINS_HOME`, choose connection modes deliberately, route by labels, and use dynamic agents for disposable work.*
+The next article follows Summit Retail as they move fragile UI jobs into committed Jenkinsfiles with stages, options, parallel branches, conditions, post blocks, and multibranch behavior.
 
 ---
 
 **References**
 
-* [Jenkins Documentation: Distributed Builds](https://www.jenkins.io/doc/book/managing/nodes/) - Official guide on configuring controller nodes, JNLP inbound agents, and execution labels.
-* [Jenkins Remoting Library](https://github.com/jenkinsci/remoting) - Technical specification of the Java-based network communication layer used to stream logs and manage sockets between controllers and agents.
-* [Kubernetes Plugin for Jenkins](https://plugins.jenkins.io/kubernetes/) - Detailed architectural reference for orchestrating dynamic, ephemeral Pod agents on Kubernetes clusters.
-* [Jenkins Hardware Recommendations](https://www.jenkins.io/doc/book/scaling/hardware-recommendations/) - Official system specs, JVM heap sizing, and CPU allocation rules for production controllers.
+- [Jenkins: Managing Nodes](https://www.jenkins.io/doc/book/managing/nodes/) - Defines the controller, agents, executors, and the controller role in Jenkins scheduling.
+- [Jenkins: Exposed Services and Ports](https://www.jenkins.io/doc/book/security/services/) - Documents inbound agent transport, WebSocket transport, and agent-related ports.
+- [Jenkins Kubernetes plugin](https://plugins.jenkins.io/kubernetes/) - Explains dynamic Kubernetes pod agents and the agent container inside each pod.
+- [Jenkins: Controller Isolation](https://www.jenkins.io/doc/book/security/controller-isolation/) - Explains why build execution should stay isolated from controller state.
+- [Jenkins: Docker installation](https://www.jenkins.io/doc/book/installing/docker/) - Documents Jenkins Docker runtime paths, inbound agent port notes, and resource guidance.
